--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Devanand
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: An electronics-engineer turned computational-biologist !
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://www.imsc.res.in/~devanandt/photo.png
 
 #
 # Flags below are optional
