--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Devanand
 
 # Short bio or description (displayed in the header)
-description: An electronics-engineer turned computational-biologist !
+description: An electronics-engineer turned computational-scientist !
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://www.imsc.res.in/~devanandt/photo.png
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: dexterdev
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/devanand-t-76769137/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: devanand_t
