--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: dexterdev
   instagram:
-  linkedin: https://www.linkedin.com/in/devanand-t-76769137/
+  linkedin: devanand-t-76769137/
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: devanand_t
